@@ -2,6 +2,7 @@ v1.4.5 (WIP)
 - Add multithreading support
 - Add ContextMenu (initially supported by List)
 - Add List.Transform and TreeView.Transform
+- Add Application.SetBeforeFocusFunc and Application.SetAfterFocusFunc
 - Merge upstream mouse support
 
 v1.4.4 (2020-02-24)
